--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,4 +15,5 @@
     <string name="sign_in_password">mot de pass</string>
     <string name="welcome_button">Continuer</string>
     <string name="welcome_text">Premiers pas avec Mealer</string>
+    <string name="or">ou</string>
 </resources>
