Working account creation using user form

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,4 +16,5 @@
     <string name="continue_text">Continuer</string>
     <string name="welcome_text">Premiers pas avec Mealer</string>
     <string name="or">ou</string>
+    <string name="user_info_form_password">mot de pass</string>
 </resources>
