--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="continue_text">Continue</string>
     <string name="welcome_text">First steps with Mealer</string>
     <string name="or">or</string>
+    <string name="user_info_form_password">password</string>
 </resources>
