--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -3,7 +3,7 @@
     <string name="user_info_form_first_name" translatable="false">Prénom</string>
     <string name="user_info_form_last_name">Nom</string>
     <string name="user_info_form_address">Adress</string>
-    <string name="user_info_form_title">Informations</string>
+    <string name="user_info_form_title">Info Utilisateur</string>
     <string name="user_info_form_email">Courielle</string>
     <string name="user_info_form_credit_card">Carte de Crédit</string>
     <string name="user_info_form_description">Description</string>
@@ -17,4 +17,6 @@
     <string name="welcome_text">Premiers pas avec Mealer</string>
     <string name="or">ou</string>
     <string name="user_info_form_password">mot de pass</string>
+    <string name="chef_info_form_title">Info Chef</string>
+    <string name="void_check">Check Void</string>
 </resources>
