--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,4 +19,5 @@
     <string name="user_sign_up_form_password">mot de pass</string>
     <string name="chef_sign_up_form_title">Info Chef</string>
     <string name="void_check">Check Void</string>
+    <string name="hello_test">alloTest</string>
 </resources>
