first stage of user welcome working

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,5 +19,5 @@
     <string name="user_sign_up_form_password">mot de pass</string>
     <string name="chef_sign_up_form_title">Info Chef</string>
     <string name="void_check">Check Void</string>
-    <string name="displayNameHome">alloTest</string>
+    <string name="displayNameHome">dont wanna be seeing this</string>
 </resources>
