--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -19,4 +19,9 @@
     <string name="user_sign_up_form_password">mot de pass</string>
     <string name="chef_sign_up_form_title">Info Chef</string>
     <string name="void_check">Check Void</string>
+    <string name="form_required_field">Cette donnée est nécéssaire.</string>
+    <string name="form_invalid_email">Courielle est invalide.</string>
+    <string name="form_invalid_password">Mot de pass doit être minimum 8 characters.</string>
+    <string name="form_invalid_credit_card">Numéro de carte doit être minimum 16 numéros.</string>
+    <string name="form_invalid_terms_and_conditions">Il faut accepter les termes et conditions.</string>
 </resources>
