--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,9 @@
     <string name="user_sign_up_form_password">password</string>
     <string name="chef_sign_up_form_title">Chef Info</string>
     <string name="void_check">Void Check</string>
+    <string name="form_required_field">This field is required.</string>
+    <string name="form_invalid_email">Email is invalid.</string>
+    <string name="form_invalid_password">Password must be minimum 8 characters.</string>
+    <string name="form_invalid_credit_card">Credit card number must be a minimum of 16 digits.</string>
+    <string name="form_invalid_terms_and_conditions">Terms and conditions must be accepted first.</string>
 </resources>
