Improve typing of MealerSerializable

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -37,4 +37,5 @@
     <string name="role_chef">cuisinier</string>
     <string name="role_user">client</string>
     <string name="role_admin">administrateur</string>
+    <string name="complaint">pleinte</string>
 </resources>
