--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="role_chef">chef</string>
     <string name="role_user">user</string>
     <string name="role_admin">admin</string>
+    <string name="complaint">complaint</string>
 </resources>
