--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -38,4 +38,5 @@
     <string name="role_user">client</string>
     <string name="role_admin">administrateur</string>
     <string name="complaint">pleinte</string>
+    <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
 </resources>
