--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,7 @@
     <string name="role_user">user</string>
     <string name="role_admin">admin</string>
     <string name="complaint">complaint</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
 </resources>
