--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -39,4 +39,9 @@
     <string name="role_admin">administrateur</string>
     <string name="complaint">pleinte</string>
     <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
+    <string name="alert_suspension_quit">Fermer</string>
+    <string name="alert_suspension_signout">Sign Out</string>
+    <string name="alert_suspension_description">Cet suspension est</string>
+    <string name="alert_suspension_title">Vous avez été suspendu!</string>
+    <string name="hello_blank_fragment">Bonjour</string>
 </resources>
