--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,8 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
+    <string name="alert_suspension_title">You\'ve been suspended!</string>
+    <string name="alert_suspension_description">This suspension is</string>
+    <string name="alert_suspension_signout">Sign Out</string>
+    <string name="alert_suspension_quit">Quit</string>
 </resources>
