--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -45,4 +45,6 @@
     <string name="alert_suspension_title">Vous avez été suspendu!</string>
     <string name="hello_blank_fragment">Bonjour</string>
     <string name="alert_suspension_permanent_description">Vous avez été suspendu!</string>
+    <string name="action_view">Visionez</string>
+    <string name="action_reject">Rejetez</string>
 </resources>
