--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -47,4 +47,5 @@
     <string name="alert_suspension_permanent_description">Vous avez été suspendu!</string>
     <string name="action_view">Visionez</string>
     <string name="action_reject">Rejetez</string>
+    <string name="bottom_navigation_menu_label_menu">Menu</string>
 </resources>
