--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,4 +53,7 @@
     <string name="action_view">View</string>
     <string name="action_reject">Reject</string>
     <string name="bottom_navigation_menu_label_menu">Menu</string>
+    <string name="recipe_form_submit">Submit</string>
+    <string name="recipe_form_take_photo">Take Photo</string>
+    <string name="recipe_form_title">New Recipe</string>
 </resources>
