--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -51,4 +51,10 @@
     <string name="recipe_form_submit">Submit</string>
     <string name="recipe_form_take_photo">Take Photo</string>
     <string name="recipe_form_title">New Recipe</string>
+    <string name="recipe_course_label">Course</string>
+    <string name="recipe_categories_label">Catégories</string>
+    <string name="recipe_ingredients_label">Ingrédients :</string>
+    <string name="recipe_allergens_label">Allergens :</string>
+    <string name="recipe_price_label">Prix :</string>
+    <string name="delete">Delete</string>
 </resources>
