--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,4 +57,5 @@
     <string name="recipe_allergens_label">Allergens :</string>
     <string name="recipe_price_label">Prix :</string>
     <string name="delete">Delete</string>
+    <string name="save">Save</string>
 </resources>
