--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,4 +62,5 @@
     <string name="recipe_allergens_label">Allergens :</string>
     <string name="recipe_price_label">Price :</string>
     <string name="delete">Delete</string>
+    <string name="save">Save</string>
 </resources>
