--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -58,4 +58,5 @@
     <string name="recipe_price_label">Prix :</string>
     <string name="delete">Delete</string>
     <string name="save">Save</string>
+    <string name="filters">filters:</string>
 </resources>
