--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -59,4 +59,7 @@
     <string name="delete">Delete</string>
     <string name="save">Save</string>
     <string name="filters">filters:</string>
+    <string name="recipe_form_name">Name</string>
+    <string name="recipe_form_course">Course</string>
+    <string name="recipe_form_ingredients">Ingredients</string>
 </resources>
