--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="recipe_form_allergens">Allergens</string>
     <string name="recipe_form_price">Price</string>
     <string name="recipe_form_description">Description</string>
+    <string name="bottom_navigation_menu_label_order">Orders</string>
 </resources>
