--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -63,4 +63,6 @@
     <string name="recipe_form_course">Course</string>
     <string name="recipe_form_ingredients">Ingredients</string>
     <string name="bottom_navigation_menu_label_order">Orders</string>
+    <string name="close">Close</string>
+    <string name="order">Order</string>
 </resources>
