--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,11 @@
     <string name="bottom_navigation_menu_label_order">Orders</string>
     <string name="close">Close</string>
     <string name="order">Order</string>
+    <string name="your_order">Your Order:</string>
+    <string name="spacer">_________________________</string>
+    <string name="OrderLabel">O: %1$s</string>
+    <string name="order_status_text">Order status: %1$s</string>
+    <string name="order_status_progress_label">Avancement de votre commande</string>
+    <string name="show_resolved">Show Resolved</string>
+    <string name="set_status">Set status:</string>
 </resources>
