--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="view_profile">View Profile</string>
 
     <string name="search_for_food">Search food or restaurants</string>
+    <string name="chef_profile">Chef profile</string>
 </resources>
