--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -74,4 +74,5 @@
     <string name="set_status">Set status:</string>
     <string name="order_status_write_complaint">Write Complaint</string>
     <string name="complaint_form_description">Description</string>
+    <string name="cancel">Cancel</string>
 </resources>
