--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,100 +1,113 @@
 <resources>
     <string name="welcome">Welcome</string>
     <string name="app_name" translatable="false">Mealer</string>
-    <string name="user_sign_up_form_first_name">First Name</string>
-    <string name="user_sign_up_form_last_name">Last Name</string>
-    <string name="user_sign_up_form_address">Address</string>
-    <string name="user_sign_up_form_title">User Info</string>
-    <string name="user_sign_up_form_email">Email</string>
-    <string name="user_sign_up_form_credit_card">Credit Card</string>
-    <string name="user_sign_up_form_description">Description</string>
-    <string name="user_sign_up_form_conditions">Conditions</string>
-    <string name="user_sign_up_form_submit">SUBMIT</string>
-    <string name="sign_in_header">Sign In</string>
-    <string name="sign_in_email">email</string>
-    <string name="sign_in_password">password</string>
     <string name="mealer_logo" translatable="false">MealerLogo</string>
-    <string name="continue_text">Continue</string>
-    <string name="welcome_text">First steps with Mealer</string>
-    <string name="or">or</string>
-    <string name="user_sign_up_form_password">password</string>
+
+    <!-- Titles -->
+    <string name="user_sign_up_form_title">User Info</string>
     <string name="chef_sign_up_form_title">Chef Info</string>
-    <string name="void_check">Void Check</string>
+    <string name="sign_in_title">Sign In</string>
+    <string name="complaint_form_title">Complaint</string>
+    <string name="account_title">Account</string>
+    <string name="recipe_form_title">New Recipe</string>
+
+    <!-- Other -->
+    <string name="welcome_text">First steps with Mealer</string>
+    <string name="displayUser">Something went wrong displaying this text</string>
+    <string name="filters">filters</string>
+    <string name="filter_offered">Offered</string>
+
+    <!-- Actions -->
+    <string name="action_submit">SUBMIT</string>
+    <string name="action_view">View</string>
+    <string name="action_reject">Reject</string>
+    <string name="action_continue">Continue</string>
+    <string name="action_take_photo">Take Photo</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_save">Save</string>
+    <string name="action_close">Close</string>
+    <string name="action_show_resolved">Show Resolved</string>
+    <string name="action_view_profile">View Profile</string>
+    <string name="action_search_for_food">Search food or restaurants</string>
+    <string name="action_cancel">Cancel</string>
+    <string name="action_set_status">Set status:</string>
+    <string name="action_show_chef">View Chef</string>
+    <string name="action_sign_out">Sign Out</string>
+    <string name="action_search">Search Here</string>
+    <string name="action_order">Order</string>
+
+    <!-- Logic -->
+    <string name="logic_or">or</string>
+
+    <!-- Form Strings -->
+    <string name="form_first_name">First Name</string>
+    <string name="form_last_name">Last Name</string>
+    <string name="form_address">Address</string>
+    <string name="form_role">Role</string>
+    <string name="form_email">Email</string>
+    <string name="form_credit_card">Credit Card</string>
+    <string name="form_description">Description</string>
+    <string name="form_conditions">Conditions</string>
+    <string name="form_password">Password</string>
+    <string name="form_void_check">Void Check</string>
+    <string name="form_course">Course</string>
+    <string name="form_categories">Categories</string>
+    <string name="form_ingredients">Ingredients</string>
+    <string name="form_allergens">Allergens</string>
+    <string name="form_price">Price</string>
+    <string name="form_name">Name</string>
+
+
+    <!-- Form Errors -->
     <string name="form_required_field">This field is required.</string>
     <string name="form_invalid_email">Email is invalid.</string>
     <string name="form_invalid_password">Password must be minimum 8 characters.</string>
     <string name="form_invalid_credit_card">Credit card number must be a minimum of 16 digits.</string>
     <string name="form_invalid_terms_and_conditions">Terms and conditions must be accepted first.</string>
-    <string name="displayUser">Something went wrong displaying this text</string>
     <string name="form_wrong_password">Wrong password</string>
+
+    <!-- Menu -->
     <string name="bottom_navigation_menu_label_complaints">Complaints</string>
     <string name="bottom_navigation_menu_label_settings">Settings</string>
+    <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
+    <string name="bottom_navigation_menu_label_menu">Menu</string>
+    <string name="bottom_navigation_menu_label_order">Orders</string>
 
-    <!-- Preference Titles -->
-    <string name="account_header">Account</string>
-    <string name="account_first_name">First Name</string>
-    <string name="account_last_name">Last Name</string>
-    <string name="account_address">Address</string>
-    <string name="account_sign_out">Sign Out</string>
-    <string name="account_role">Role</string>
-
+    <!-- Roles -->
     <string name="role_chef">chef</string>
     <string name="role_user">user</string>
     <string name="role_admin">admin</string>
+
+    <!-- Status -->
+    <string name="status_waiting">waiting</string>
+    <string name="status_accepted">accepted</string>
+    <string name="status_rejected">rejected</string>
+    <string name="status_completed">completed</string>
+
+    <!-- Objects -->
     <string name="complaint">complaint</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="bottom_navigation_menu_label_recommendations">Recommendations</string>
+    <string name="order">order</string>
+    <string name="recipe">recipe</string>
+
+    <!-- Alert -->
     <string name="alert_suspension_title">You\'ve been suspended!</string>
     <string name="alert_suspension_description">You have been suspended until %s.</string>
     <string name="alert_suspension_signout">Sign Out</string>
     <string name="alert_suspension_quit">Quit</string>
     <string name="alert_suspension_permanent_description">You have been permanetly suspended.</string>
-    <string name="action_view">View</string>
-    <string name="action_reject">Reject</string>
-    <string name="bottom_navigation_menu_label_menu">Menu</string>
-    <string name="recipe_form_submit">Submit</string>
-    <string name="recipe_form_take_photo">Take Photo</string>
-    <string name="recipe_form_title">New Recipe</string>
-    <string name="recipe_course_label">Course</string>
-    <string name="recipe_categories_label">Categories</string>
-    <string name="recipe_ingredients_label">Ingredients :</string>
-    <string name="recipe_allergens_label">Allergens :</string>
-    <string name="recipe_price_label">Price :</string>
-    <string name="delete">Delete</string>
-    <string name="save">Save</string>
-    <string name="filters">filters:</string>
-    <string name="recipe_form_name">Name</string>
-    <string name="recipe_form_course">Course</string>
-    <string name="recipe_form_categories">Categories</string>
-    <string name="recipe_form_ingredients">Ingredients</string>
-    <string name="recipe_form_allergens">Allergens</string>
-    <string name="recipe_form_price">Price</string>
-    <string name="recipe_form_description">Description</string>
-    <string name="bottom_navigation_menu_label_order">Orders</string>
-    <string name="close">Close</string>
-    <string name="order">Order</string>
+
+    <!-- Order -->
     <string name="your_order">Your Order:</string>
     <string name="spacer">_________________________</string>
-    <string name="OrderLabel">O: %1$s</string>
+    <string name="order_label">O: %1$s</string>
     <string name="order_status_text">Order status: %1$s</string>
     <string name="order_status_progress_label">Avancement de votre commande</string>
-    <string name="show_resolved">Show Resolved</string>
-    <string name="set_status">Set status:</string>
     <string name="order_status_write_complaint">Write Complaint</string>
-    <string name="complaint_form_title">Complaint</string>
-    <string name="complaint_form_description">Description</string>
 
-    <string name="order_1_star_rating">1 Star rating</string>
-    <string name="order_2_star_rating">2 star rating</string>
-    <string name="order_3_star_rating">3 star rating</string>
-    <string name="order_4_star_rating">4 star rating</string>
-    <string name="order_5_star_rating">5 star rating</string>
-    <string name="profile_title">Profil</string>
-    <string name="profile_subtitle">A profile</string>
-    <string name="view_profile">View Profile</string>
-
-    <string name="search_for_food">Search food or restaurants</string>
-    <string name="chef_profile">Chef profile</string>
-    <string name="cancel">Cancel</string>
+    <!-- Stars -->
+    <string name="star_rating_1">1 Star rating</string>
+    <string name="star_rating_2">2 star rating</string>
+    <string name="star_rating_3">3 star rating</string>
+    <string name="star_rating_4">4 star rating</string>
+    <string name="star_rating_5">5 star rating</string>
 </resources>
