--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -15,6 +15,8 @@
     <string name="filters">filtre</string>
     <string name="filter_offered">Proposé</string>
 
+    <string name="chef_choose">Chef</string>
+
     <!-- Actions -->
     <string name="action_submit">Soumettre</string>
     <string name="action_view">Ouvrir</string>
