Fix chef isOffered

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="form_allergens">Allergens</string>
     <string name="form_price">Price</string>
     <string name="form_name">Name</string>
+    <string name="form_is_offered">Is offered</string>
 
 
     <!-- Form Errors -->
