--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -57,6 +57,7 @@
     <string name="form_allergens">Allergèns</string>
     <string name="form_price">Prix</string>
     <string name="form_name">Nom</string>
+    <string name="form_is_offered">Est proposé</string>
 
 
     <!-- Form Errors -->
