choose role UI done

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -16,6 +16,7 @@
     <string name="filter_offered">Proposé</string>
 
     <string name="chef_choose">Chef</string>
+    <string name="user_choose">Client</string>
 
     <!-- Actions -->
     <string name="action_submit">Soumettre</string>
